# deepecg-kit

./: .gitignore  Makefile  README.md  experiments.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
deepecgkit/: __init__.py  __main__.py  cli.py  registry.py
deepecgkit/cli/: __init__.py  config.py  evaluation.py  logger.py  main.py  registry.py
deepecgkit/cli/commands/: __init__.py  evaluate.py  info.py  predict.py  train.py
deepecgkit/datasets/: __init__.py  af_classification.py  base.py  ltafdb.py  mitbih_afdb.py  modules.py  preprocessing.py  ptbxl.py  splitting.py  unified_af.py
deepecgkit/evaluation/: __init__.py  evaluator.py  metrics.py  visualization.py
deepecgkit/models/: __init__.py  af_classifier.py  convnext_v2_1d.py  crnn.py  deep_res_cnn.py  ecg_dualnet.py  fcn_wang.py  gru_model.py  inception_time.py  kanres_wide_x.py  kanres_x.py  lstm_model.py  mamba1d.py  medformer.py  resnet1d.py  resnet1d_wang.py  se_resnet1d.py  simple_cnn.py  tcn.py  transformer_ecg.py  xresnet1d.py  xresnet1d_benchmark.py
deepecgkit/training/: __init__.py  train.py
deepecgkit/utils/: __init__.py  download.py  weights.py
docs/: index.md
docs/api/: datasets.md  evaluation.md  index.md  models.md  registry.md  training.md  utils.md
docs/examples/: model-comparison.md  train-advanced.md  train-basic.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: cli.md  datasets.md  evaluation.md  model-zoo.md  training.md
examples/: cli_advanced.sh  cli_quickstart.sh  evaluate_model.py  explore_dataset.py  feature_extraction.py  inference.py  model_comparison.py  train_advanced.py  train_basic.py
scripts/: run_experiments.py
tests/: __init__.py  conftest.py  test_cli.py  test_datasets.py  test_deepecgkit.py  test_evaluation.py  test_models.py  test_registry.py  test_training.py  test_utils.py
