[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["deepecgkit*"]

[project]
name = "deepecgkit"
version = "0.1.0"
authors = [
    { name = "Steven", email = "steven@simula.no" },
]
description = "A deep learning toolkit for ECG analysis"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",

]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "torch>=1.9.0",
    "pandas>=1.3.0",
    "scikit-learn>=0.24.0",
    "matplotlib>=3.4.0",
    "wfdb>=3.4.0",
    "pyEDFlib>=0.1.0",
    "PyWavelets>=1.1.0",
    "seaborn>=0.11.0",
    "tqdm>=4.60.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
deepecg = "deepecgkit.cli:main"

[project.optional-dependencies]
dev = [
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
    "ruff>=0.11.13",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "mkdocs-autorefs>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=deepecgkit --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["deepecgkit"]
omit = [
    "tests/*",
    "setup.py",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.ruff]
line-length = 100
target-version = "py38"
lint.select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
lint.ignore = ["E501", "PLR0911", "PLR0913", "PLR0915", "PLR2004", "PLR0912", "E712", "RUF015"]
lint.isort.known-first-party = ["deepecgkit"]


[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=3.0.0",
    "ruff>=0.11.13",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "mkdocs-autorefs>=1.0.0",
]
